--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".HabitActivity"></activity>
+        <activity android:name=".ProgressActivity"></activity>
+        <activity android:name=".CreateHabitActivity" />
+        <activity android:name=".CalendarActivity" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -32,8 +34,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".login.RegisterActivity" />
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".homePage.HomeActivity" />
+        <activity android:name=".MainActivity" />
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
