--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
 
     <application
         android:allowBackup="true"
@@ -15,10 +18,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".ProgressActivity"></activity>
-        <activity android:name=".CreateHabitActivity" />
-        <activity android:name=".CalendarActivity" />
+        android:theme="@style/AppTheme.NoActionBar"
+        android:name="androidx.multidex.MultiDexApplication" >
+        <activity android:name=".addActivity.AddHabitActivity"></activity>
+        <activity android:name=".ProgressActivity" />
+        <activity android:name=".calendarPage.CalendarActivity" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
