--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,21 +8,20 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name="androidx.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar"
-        android:name="androidx.multidex.MultiDexApplication" >
-
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".SplashActivity"></activity>
         <activity android:name=".homePage.HomeActivity" />
-        <activity android:name=".addActivity.AddHabitActivity"></activity>
+        <activity android:name=".addActivity.AddHabitActivity" />
         <activity android:name=".ProgressActivity" />
         <activity android:name=".profilePage.ProfileActivity" />
         <activity android:name=".calendarPage.CalendarActivity" />
