--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
+    dataBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.example.halward"
         minSdkVersion 19
@@ -58,6 +61,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.theyy:fresco:0.8.3'
+
 
 }
