--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,35 +33,36 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
-    implementation 'com.google.firebase:firebase-core:17.2.2'
-    implementation 'com.google.firebase:firebase-database:16.0.4'
-    implementation 'com.google.firebase:firebase-firestore:21.3.0'
-    implementation 'com.google.firebase:firebase-storage:19.1.0'
+    implementation 'com.google.firebase:firebase-core:17.2.3'
+    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-firestore:21.4.1'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
 
 
     implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
     implementation 'com.afollestad.material-dialogs:core:3.1.1'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     // Add the Firebase SDK for Google Analytics
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-analytics:17.2.3'
 
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-    implementation 'com.google.android.material:material:1.2.0-alpha03'
-    implementation 'com.facebook.android:facebook-login:[5,6)'
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    implementation 'com.github.sundeepk:compact-calendar-view:2.0.2.2'
+    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.github.theyy:fresco:0.8.3'
+    implementation 'com.facebook.android:facebook-login:[5,6)'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
 }
