--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
         targetCompatibility = 1.8
     }
 }
+repositories {
+    maven { url "https://jitpack.io" }
+    google()
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -68,12 +72,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:[5,6)'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.lzyzsd:circleprogress:1.1.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 
-}
-allprojects {
-    repositories {
-        maven { url "https://jitpack.io" }
-        google()
-    }
 }
